--- a/3d page/3-D page/index.html
+++ b/3d page/3-D page/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>3D-webpage</title>
+        <link rel="icon" href="robo-removebg-preview.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive-style.css">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
